force-app/main/default/objects/clofor_com_cfs__PayablesAmount__c/fields/clofor_com_cfs__PaidDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidDate__c</fullName>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>