force-app/main/default/objects/clofor_com_cfs__PayablesAmount__c/fields/clofor_com_cfs__PaidNote__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidNote__c</fullName>
    <label>Paid Note</label>
    <type>TextArea</type>
</CustomField>