force-app/main/default/objects/clofor_com_cfs__PayablesAmount__c/fields/clofor_com_cfs__Paidto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Paidto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payables Amount</relationshipLabel>
    <relationshipName>Payables_Amount</relationshipName>
    <type>Lookup</type>
</CustomField>